--- a/templates/nuevo.html
+++ b/templates/nuevo.html
@@ -1,4 +1,4 @@
-<form class="" action="../dropzone.php" method="post">
+<form class="centered-form" action="../dropzone.php" method="post">
    <label for="categoria">Categoria:</label> <br/>
    <select id="categoria" name="categoria">
            <option value="" selected="selected">Elige una categoria</option>
