--- a/static/css/style.css
+++ b/static/css/style.css
@@ -296,6 +296,10 @@ html, body {
   background-color: rgba(200, 200, 200, 0.5);
 }
 
+.tablaproductos tr:nth-child(even) button {
+  background-color: #f0f0f0;
+}
+
 #cuentaresultados {
   display: inline;
 }
@@ -331,7 +335,7 @@ html, body {
 
 .botonesbonitos:hover {
   color: #444;
-  background-color: #c9c9c9;
+  background-color: #c9c9c9 !important;
   border-color: #b3b3b3;
 }
 
