--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -11,7 +11,6 @@
 					</select>
 	</div>
 	<div id="resultado">
-		resultado1
 	</div>
 </div>
 
@@ -39,19 +38,18 @@
 				var cadena = cadena + "<table><tr><th></th><th>Nombre</th><th>categoria</th></tr>";
 				for (var i = 0; i < datos.length; i++) {
 					cadena = cadena + "<tr><td><a href='controlador.php?accion=producto&id=1&producto=" + datos[i][0] + "'>";
-					//TODO imagen
-					// if (datos[i][3] == "0")
+					if (datos[i][3] == null)
 						cadena = cadena + "<img src=http://placehold.it/100x80></a></td>";
-					// else
-						// cadena = cadena + "<img src=/static/images/catalogo/" + datos[i][3] + " height='80px'></a></td>";
-						cadena = cadena + "<td>" + datos[i][1] + "</td>";
-						cadena = cadena + "<td>" + datos[i][2] + "</td>";
-						cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos' name='button' onclick='favoritos(" + datos[i][0] + ")'>"
-						if (datos[i][4] == "0")
-							cadena = cadena + "Añadir a favoritos";
-						else
-							cadena = cadena +"Eliminar de favoritos";
-						cadena = cadena + "</button></td>##parausuarios##</tr>";
+					else
+						cadena = cadena + "<img src=/static/images/catalogo/" + datos[i][3] + " height='80px'></a></td>";
+					cadena = cadena + "<td>" + datos[i][1] + "</td>";
+					cadena = cadena + "<td>" + datos[i][2] + "</td>";
+					cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos' name='button' onclick='favoritos(" + datos[i][0] + ")'>"
+					if (datos[i][4] == "0")
+						cadena = cadena + "Añadir a favoritos";
+					else
+						cadena = cadena + "Eliminar de favoritos";
+					cadena = cadena + "</button></td>##parausuarios##</tr>";
 				}
 				cadena = cadena + "</table>";
 				$("#resultado").html(cadena);
