--- a/templates/producto.html
+++ b/templates/producto.html
@@ -1,8 +1,17 @@
 <h1 id="idprod">##idproducto##</h1>
 <img src="##imagen##" alt="imagen">
+<h2>Nombre</h2>
+<p>##nombre##</p>
 <h2>Descripción</h2>
 <p>##descripcion##</p>
 <h2>##precio##€</h2>
+<h2>Comentarios</h2>
+<p>##comentarios##</p>
+<form action="../nuevocomentario.php" enctype="multipart/form-data" method="post">
+<h2>Añadir nuevo comentario</h2>
+<textarea name="comentario" id="comentario" ></textarea><br>
+##id##
+<input type="submit" value="Enviar" />
 
 ##parausuarios##
 
