funcionando para jpg, png y gif

--- a/templates/nuevo.html
+++ b/templates/nuevo.html
@@ -29,7 +29,7 @@
       parallelUploads: 5,
       maxFiles: 5,
       maxFilesize: 1,
-      acceptedFiles: 'image/*',
+      acceptedFiles: '.jpg, .png, .gif',
       addRemoveLinks: true,
       init: function() {
          dzClosure = this; // Makes sure that 'this' is understood inside the functions below.
