--- a/templates/producto.html
+++ b/templates/producto.html
@@ -6,8 +6,8 @@
 <p>##descripcion##</p>
 <h2>##precio##€</h2>
 <h2>Comentarios</h2>
-<p>##comentarios##</p>
-<form action="../nuevocomentario.php" enctype="multipart/form-data" method="post">
+<p>##comentarios##</p
+<form action="controlador.php?accion=comentario&id=1" enctype="multipart/form-data" method="post">
 <h2>Añadir nuevo comentario</h2>
 <textarea name="comentario" id="comentario" ></textarea><br>
 ##id##
