--- a/templates/producto.html
+++ b/templates/producto.html
@@ -7,7 +7,7 @@
 <h2>##precio##€</h2>
 <h2>Comentarios</h2>
 <p>##comentarios##</p
-<form action="controlador.php?accion=comentario&id=1" enctype="multipart/form-data" method="post">
+<form action="../nuevocomentario.php" enctype="multipart/form-data" method="post">
 <h2>Añadir nuevo comentario</h2>
 <textarea name="comentario" id="comentario" ></textarea><br>
 ##id##
