comienzo cambios gordos

--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -25,7 +25,7 @@
 
 <button id="botoncargamas" class="botonesbonitos botonesanchos" type="button" name="button" onclick="clicado()">Mostrar más</button>
 
-<script type="text/javascript" src="/static/js/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="static/js/jquery-3.2.0.min.js"></script>
 <script type="text/javascript">
 	var clicks = 1;
 
@@ -35,7 +35,7 @@
 		var busqueda = $("#busq").val();
 
 		$.ajax({
-			url: "/catalogo.php?cat=" + cat + "&clicks=" + clicks + "&orden=" + orden + "&comienzo="+busqueda,
+			url: "ajax/catalogo.php?cat=" + cat + "&clicks=" + clicks + "&orden=" + orden + "&comienzo="+busqueda,
 			success: function(response) {
 				var total = jQuery.parseJSON(response);
 				$("#cuentaresultados").html(total[0] + " artículos");
