--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
   <title>##titulo##</title>
 </head>
 
