--- a/templates/producto.html
+++ b/templates/producto.html
@@ -6,19 +6,20 @@
 <p>##descripcion##</p>
 <h2>##precio##€</h2>
 <h2>Comentarios</h2>
-<p>##comentarios##</p
-<form action="../nuevocomentario.php" enctype="multipart/form-data" method="post">
-<h2>Añadir nuevo comentario</h2>
-<textarea name="comentario" id="comentario" ></textarea><br>
-##id##
-<input type="submit" value="Enviar" />
-
+<p>##comentarios##</p>
 ##parausuarios##
+
+<form action="modelo/nuevocomentario.php" enctype="multipart/form-data" method="post">
+     <h2>Añadir nuevo comentario</h2>
+     <textarea name="comentario" id="comentario" ></textarea><br>
+     ##id##
+     <input type="submit" value="Enviar">
+</form>
 
 <button id="botonfavoritos" type="button" class="botonesbonitos" name="button" onclick="favoritosv()">##favorito##</button>
 <div id="error" class="alert-box failure">Algo ha fallado</div>
 
-<script type="text/javascript" src="/static/js/jquery-3.2.0.min.js"></script>
+<script type="text/javascript" src="static/js/jquery-3.2.0.min.js"></script>
 <script type="text/javascript">
   function cargar(){
     if ($('#botonfavoritos').text()==="Añadir a favoritos") {
