--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-<form class="centered-form" action="modelo/login.php" method="post">
+<form class="centered-form" action="controlador.php?accion=mlogin&id=1" method="post">
        <div class="letraroja">
               ##loginfailed##
        </div>
