--- a/templates/producto.html
+++ b/templates/producto.html
@@ -9,7 +9,7 @@
 <p>##comentarios##</p>
 ##parausuarios##
 
-<form action="modelo/nuevocomentario.php" enctype="multipart/form-data" method="post">
+<form action="controlador.php?accion=nuevocomentario&id=1" enctype="multipart/form-data" method="post">
      <h2>Añadir nuevo comentario</h2>
      <textarea name="comentario" id="comentario" ></textarea><br>
      ##id##
