--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,4 +1,4 @@
-<form class="centered-form" action="modelo/registro.php" method="post" onsubmit="return validateForm()">
+<form class="centered-form" action="controlador.php?accion=mregistro&id=1" method="post" onsubmit="return validateForm()">
 
        <div class="letraroja">
               ##regfailed##
