Añadidos botones de compartir en redes sociales

--- a/templates/producto.html
+++ b/templates/producto.html
@@ -31,3 +31,4 @@
 </script>
 
 ##parausuarios##
+<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=591f1bc84d2b0c001100a83b&product=sticky-share-buttons" async="async"></script>
