--- a/templates/nuevo.html
+++ b/templates/nuevo.html
@@ -29,7 +29,7 @@
       parallelUploads: 5,
       maxFiles: 5,
       maxFilesize: 1,
-      acceptedFiles: '.jpg, .png, .gif',
+      acceptedFiles: '.jpg, .png, .gif, .jpeg',
       addRemoveLinks: true,
       init: function() {
          dzClosure = this; // Makes sure that 'this' is understood inside the functions below.
