Modificada vista de producto. Ahora no se muestra el idproducto y el nombre es el h1

--- a/templates/producto.html
+++ b/templates/producto.html
@@ -1,7 +1,5 @@
-<h1 id="idprod">##idproducto##</h1>
+<h1>##nombre##</h1>
 <img src="##imagen##" alt="imagen">
-<h2>Nombre</h2>
-<p>##nombre##</p>
 <h2>Descripción</h2>
 <p>##descripcion##</p>
 <h2>##precio##€</h2>
