--- a/templates/producto.html
+++ b/templates/producto.html
@@ -1,4 +1,5 @@
 <h1>##nombre##</h1>
+<h1 id="idproducto">##idproducto##</h1>
 <img src="##imagen##" alt="imagen">
 <h2>Descripción</h2>
 <p>##descripcion##</p>
