--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -12,6 +12,7 @@
   <div class="prenavbar">
     <button type="button" class="botonmenu" name="menu" onclick="botonmenu()"></button>
     <div class="logo">
+      <a href="controlador.php?accion=index&id=1"></a>
     </div>
     <a class=##botonlogin## href="##linklogin##"></a>
   </div>
