--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <h1>Destacados de hoy</h1>
 
-<div class="slideshow-container">
+<div class="slideshow-container ocultarmovil">
   <a href="controlador.php?accion=producto&id=1&producto=##1##">
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
@@ -52,17 +52,17 @@
 <br>
 
 <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot ocultarmovil" onclick="currentSlide(1)"></span>
+  <span class="dot ocultarmovil" onclick="currentSlide(2)"></span>
+  <span class="dot ocultarmovil" onclick="currentSlide(3)"></span>
+  <span class="dot ocultarmovil" onclick="currentSlide(4)"></span>
+  <span class="dot ocultarmovil" onclick="currentSlide(5)"></span>
 </div>
 
 <br>
 
-<h1>Más destacados</h1>
-<div class="tablaproductos">
+<h1 class="ocultarmovil">Más destacados</h1>
+<div class="tablaproductos tablamovil">
     ##tablaproductos##
 </div>
 
