--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -48,7 +48,7 @@
 					var datos = total[1];
 					cadena = "<div id='correcto' class='alert-box success'>Guardado como favorito</div>";
 					cadena = cadena + "<div id='error' class='alert-box failure'>Algo ha fallado</div>";
-					var cadena = cadena + "<table><tr><th></th><th>Nombre</th><th>categoria</th></tr>";
+					var cadena = cadena + "<table><tr><th></th><th>Nombre</th><th class='ocultarmovil'>categoria</th></tr>";
 					for (var i = 0; i < datos.length; i++) {
 						cadena = cadena + "<tr><td><a href='controlador.php?accion=producto&id=1&producto=" + datos[i][0] + "'>";
 						if (datos[i][3] == null)
@@ -56,8 +56,8 @@
 						else
 							cadena = cadena + "<img src=/static/images/catalogo/" + datos[i][3] + "></a></td>";
 						cadena = cadena + "<td>" + datos[i][1] + "</td>";
-						cadena = cadena + "<td>" + datos[i][2] + "</td>";
-						cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos' name='button' onclick='favoritos(" + datos[i][0] + ")'>"
+						cadena = cadena + "<td class='ocultarmovil'>" + datos[i][2] + "</td>";
+						cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos ocultarmovil name='button' onclick='favoritos(" + datos[i][0] + ")'>"
 						if (datos[i][4] == "0")
 							cadena = cadena + "Añadir a favoritos";
 						else
