--- a/templates/localizacion.html
+++ b/templates/localizacion.html
@@ -1,6 +1,6 @@
 <div class="columnleft">
   <div class="iframecontainer">
-    <iframe class="iframeLoc"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2927.1207210416023!2d-1.6591616850857678!3d42.80693491475648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092675e980843%3A0x435b59ffa04b0944!2sCOLOR+DIGITAL!5e0!3m2!1ses!2ses!4v1487756331164"
+    <iframe class="iframeLoc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2927.1207210416023!2d-1.6591616850857678!3d42.80693491475648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092675e980843%3A0x435b59ffa04b0944!2sCOLOR+DIGITAL!5e0!3m2!1ses!2ses!4v1487756331164"
       allowfullscreen frameborder="0">
     </iframe>
   </div>
@@ -13,8 +13,10 @@
     <li><a href="mailto:colordigital@colordigital.es">Mail: colordigital@colordigital.es</a></li>
     <li>Localización: Calle Fuente del Hierro, 31, 31008 Pamplona, Navarra, España</li>
   </ul>
-  <form class="" action="controlador.php?accion=localizacion&id=1" method="post">
+  <br>
+  <form action="controlador.php?accion=localizacion&id=1" method="post">
     <textarea name="contacto" id="contacto" placeholder="Envianos tus comentarios!" rows="10" cols="30"></textarea><br>
     <input type="button" class="botonesbonitos" onclick="location.href=&quot;mailto:colordigital@colordigital.es?body=&quot;+document.getElementById(&quot;contacto&quot;).value;" value="Enviar">
   </form>
 </div>
+<div class="clear"></div>
