Añadidos iconos y mención

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -24,3 +24,5 @@ No se declarará ni se dará a entender que el Titular ha autorizado el hiperenl
 La página web en la que se establezca el hiperenlace no contendrá informaciones o contenidos ilícitos, ilegales, degradantes, obscenos, y en general, que contravengan la moral, el orden público o las normas sociales generalmente aceptadas, así como tampoco contendrá contenidos contrarios a cualesquiera derechos de terceros. Queda prohibido expresamente el establecimiento de vínculos desde páginas o sitios web cuyos contenidos promocionen o hagan apología, directa o indirectamente, de cualquier tipo de violencia, discriminación, pornografía o actividad ilegal.
 4.- Legislación aplicable
 Las partes, con expresa renuncia a su propio fuero, aceptan como legislación rectora de las presentes condiciones generales, la española y se someten para la resolución de cuantos litigios pudieran derivarse del mismo a los Juzgados y Tribunales de la ciudad de Pamplona, Comunidad Foral de Navarra.</p>
+<p>Man User free Icon made by Freepik from www.flaticon.com </p>
+<p>Menu button of three horizontal lines free Icon made by Freepik from www.flaticon.com</p>
