cambios css y títulos admin

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -269,6 +269,10 @@ html, body {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
+.tablaproductos input {
+     width: 100%;
+}
+
 .tablaproductos table {
   width: 100%;
   border-spacing: 0;
