--- a/templates/modificar.html
+++ b/templates/modificar.html
@@ -1,5 +1,7 @@
-<input type="text" name="busq" id="busq" onkeyup="cargar();">
-<div id="resultado">
+<div class="tablaproductos">
+	<input type="text" name="busq" id="busq" onkeyup="cargar();">
+	<div id="resultado">
+	</div>
 </div>
 <script type="text/javascript" src="static/js/jquery-3.2.0.min.js"></script>
 <script type="text/javascript">
