vista de usuario en móvil

--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -14,7 +14,7 @@
     <div class="logo">
       <a href="controlador.php?accion=index&id=1"></a>
     </div>
-    <a class=##botonlogin## href="##linklogin##"></a>
+    <a class=##botonlogin## href="##linkbotonmovil##"></a>
   </div>
   <div id="navigation-bar" class="navigation-bar">
     <ul>
