Botón cerrar sesión en user móvil_

--- a/templates/user.html
+++ b/templates/user.html
@@ -6,4 +6,5 @@
      </div>
      ##botonpdf##
      ##eliminarcuenta##
+     <a href="controlador.php?accion=login&id=3"> <button type="button" name="cerrarsesion" class="onlymobile botonesbonitos">Cerrar Sesión</button></a>&id=3
 </div>
