Cambios en botones

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -318,6 +318,11 @@ html, body {
   cursor: pointer;
 }
 
+.botonesbonitos a{
+   text-decoration: none;
+   color: #444;
+}
+
 .botonesanchos {
   display: block;
   width: 80% !important;
