--- a/templates/user.html
+++ b/templates/user.html
@@ -1,10 +1,11 @@
 ##admin##
+<br>
 <div class="">
      <h1>Tus favoritos:</h1>
      <div class="">
        ##productos##
      </div>
-     ##botonpdf##
+     ##botonpdf## <br>
      ##eliminarcuenta##
-     <a href="controlador.php?accion=login&id=3"> <button type="button" name="cerrarsesion" class="onlymobile botonesbonitos">Cerrar Sesión</button></a>&id=3
+     <button type="button" class="onlymobile botonesbonitos"><a href="controlador.php?accion=login&id=3">Cerrar Sesión</a> </button>
 </div>
