--- a/templates/user.html
+++ b/templates/user.html
@@ -7,5 +7,5 @@
      </div>
      ##botonpdf## <br>
      ##eliminarcuenta##
-     <button type="button" class="onlymobile botonesbonitos"><a href="controlador.php?accion=login&id=3">Cerrar Sesión</a> </button>
+     <a href="controlador.php?accion=login&id=3"><button type="button" class="onlymobile botonesbonitos">Cerrar Sesión</button></a> 
 </div>
