Workm in progress

--- a/templates/productoamodificar.html
+++ b/templates/productoamodificar.html
@@ -19,8 +19,8 @@
          <div class="dropzone" id="dropzonewidget"></div>
       </div>
    </div>
-   <input type="reset" value="Borrar" />
-   <input type="submit" id="submit-all" value="Enviar" />
+   <input type="reset" class="botonesbonitos" value="Borrar" />
+   <input type="submit" class="botonesbonitos" id="submit-all" value="Enviar" />
 </form>
 ##botoneliminarproducto##
 <div id="respuesta"></div>
