--- a/static/css/style.css
+++ b/static/css/style.css
@@ -344,7 +344,7 @@ html, body {
 .botonesbonitos:hover {
   color: #444;
   background-color: #c9c9c9 !important;
-  border-color: #b3b3b3;
+  border-color: #b3b3b3 !important;
 }
 
 
