más css todavía

--- a/templates/user.html
+++ b/templates/user.html
@@ -7,5 +7,5 @@
      </div>
      ##botonpdf## <br>
      ##eliminarcuenta##
-     <a href="controlador.php?accion=login&id=3"><button type="button" class="onlymobile botonesbonitos">Cerrar Sesión</button></a> 
+     <a href="controlador.php?accion=login&id=3"><button type="button" class="botonesbonitos onlymobile" id="botoncerrarsesion">Cerrar Sesión</button></a> 
 </div>
