Prepared Statements en la búsqueda por catalogo

--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -57,7 +57,7 @@
 							cadena = cadena + "<img src=/static/images/catalogo/" + datos[i][3] + "></a></td>";
 						cadena = cadena + "<td>" + datos[i][1] + "</td>";
 						cadena = cadena + "<td class='ocultarmovil'>" + datos[i][2] + "</td>";
-						cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos ocultarmovil name='button' onclick='favoritos(" + datos[i][0] + ")'>"
+						cadena = cadena + "##parausuarios##<td><button type='button' class='botonesbonitos ocultarmovil' name='button' onclick='favoritos(" + datos[i][0] + ")'>"
 						if (datos[i][4] == "0")
 							cadena = cadena + "Añadir a favoritos";
 						else
